# model-schema

./: .gitignore  README.md  example.py  makefile  model_schema.py  pyproject.toml
model_schema/: __init__.py  card.py  loader.py  model_schema.json  output.py  validator.py
