# pyproject.toml – model-schema

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-schema"
version = "1.1.3"
description = "Standardised manifest and validation for machine-learning models"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }
authors = [
  { name="Zachary Szewczyk", email="zacjszewczyk@gmail.com" }
]
dependencies = []

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["model_schema*"]

[tool.setuptools.package-data]
"model_schema" = ["model_schema.json"]

[project.urls]
Homepage = "https://github.com/zacjszewczyk/model-schema"
Issues   = "https://github.com/zacjszewczyk/model-schema/issues"